Updated compare function to massage timestamp